<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">随意聊</string>
    <string name="nic_name">昵称</string>
    <string name="message">消息</string>
    <string name="time">10.10</string>
    <string name="action_feed">意见反馈</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="tab_chat">会话</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>
    <string name="search">搜索</string>
    <string name="NotingContacts">暂无联系人</string>
    <string name="ApplyAndNotice">申请与通知</string>
    <string name="groupchat">群聊</string>
    <string name="chatroom">聊天室</string>
    <string name="huanxinhelper">环信小助手</string>
    <string name="send_message">发送的消息</string>
    <string name="get_message">接受到的消息gjktufidudi7edyht6itfdrs65youit7rdty6uouhyguyfreuyihlnugugt</string>
    <string name="send">发送</string>
    <string name="add_friends">添加</string>
    <string name="find">查找</string>
    <string name="addgoodyou">添加好友</string>
    <string name="parse_app_id">tC6C4hfYsffzrpcKP97bssd1EwA62Yhf0lrgQw49</string>
    <string name="parse_client_key">aI4iv3AkhZS7R3iTpO097lVkqW2jsPqKLsgQx5v7</string>
    <string name="voice_button_text">语音</string>
</resources>
