<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/AppBaseTheme">

    <item
        android:id="@+id/ab_search"
        android:orderInCategory="80"
        android:title="action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_group_chat"
        android:icon="@drawable/ofm_group_chat_icon"
        android:title="@string/action_group_chat"/>
    <item
        android:id="@+id/action_add_friend"
        android:icon="@drawable/ofm_add_icon"
        android:title="@string/action_add_friend"/>
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ofm_qrcode_icon"
        android:title="@string/action_scan"/>
    <item
        android:id="@+id/action_feed"
        android:icon="@drawable/ofm_feedback_icon"
        android:title="@string/action_feed"/>

</menu>