<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#aa060404"
        app:theme="@style/Theme.AppCompat.NoActionBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/weixin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tabbg"
        android:orientation="horizontal">

        <com.my.instantmessag.widget.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_one"
            style="@style/ChangeColorIcon"
            zhy:icon="@drawable/ic_menu_start_conversation"
            zhy:text="@string/tab_chat"
            zhy:text_size="12sp" />

        <com.my.instantmessag.widget.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_two"
            style="@style/ChangeColorIcon"
            zhy:icon="@drawable/ic_menu_friendslist"
            zhy:text="@string/tab_contact"
            zhy:text_size="12sp" />

        <com.my.instantmessag.widget.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_three"
            style="@style/ChangeColorIcon"
            zhy:icon="@drawable/ic_menu_emoticons"
            zhy:text="@string/tab_find"
            zhy:text_size="12sp" />

        <com.my.instantmessag.widget.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_four"
            style="@style/ChangeColorIcon"
            zhy:icon="@drawable/ic_menu_allfriends"
            zhy:text="@string/tab_me"
            zhy:text_size="12sp" />

    </LinearLayout>

</LinearLayout>
